--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                 </div>
                 
                 <div class="form-group">
-                    <label for="group-date">Date de la test:</label>
+                    <label for="group-date">Date de la compétition:</label>
                     <input type="date" id="group-date" required>
                 </div>
                 
