--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 <div class="logo">ASN</div>
                 <div class="title-container">
                     <h1>Fiche Technique Groupe Compétition</h1>
-                    <p>ACHBAL SPORTIF NATATION</p>
+                    <p>MARVEL UNIVERSITY NATURAL</p>
                 </div>
             </div>
         </header>
@@ -441,7 +441,7 @@
         </div>
         
         <div class="footer">
-            <p>ASN - DIRECTEUR TECHNIQUE: YOUSSEF AMRI JAMAI  &copy; 2025</p>
+            <p>ASN - MARVEL UNIVERSITY NATURAL &copy; 2025</p>
         </div>
     </div>
 
