--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 <div class="logo">ASN</div>
                 <div class="title-container">
                     <h1>Fiche Technique Groupe Compétition</h1>
-                    <p>MARVEL UNIVERSITY NATURAL</p>
+                    <p>ACHBAL SPORTIF NATATION</p>
                 </div>
             </div>
         </header>
@@ -461,7 +461,7 @@
         </div>
         
         <div class="footer">
-            <p>ASN - MARVEL UNIVERSITY NATURAL &copy; 2025</p>
+            <p>ASN - DIRECTEUR TECHNIQUE: YOUSSEF AMRI JAMAI  &copy; 2025</p>
             <p><small>Partagez ce site : <span id="share-url">Chargement...</span></small></p>
         </div>
     </div>
